--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/book_publishing_app
 spring.datasource.username=postgres
 spring.datasource.password=123
 # Hibernate configuration
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
 spring.jpa.properties.hibernate.format_sql=true
